syntax = "proto3";

package com.cgi.eoss.fstep;

option java_multiple_files = true;
option java_package = "com.cgi.eoss.fstep.rpc";
option java_outer_classname = "Messages";

message Service {
    string id = 1;
    string name = 2;
    string dockerImageTag = 3;
}

message Job {
    string id = 1;
    string intJobId = 2;
    string userId = 3;
    string serviceId = 4;
}

message JobParam {
    string paramName = 1;
    repeated string paramValue = 2;
}

message ShortFile {
    string filename = 1;
    bytes content = 2;
    bool executable = 3;
}
